--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     --list-light: #ffffff;
     --list-background: #f6f8f9;
     --list-task: #47adf1;
+    --list-section: #dce0e3;
     --list-editorial: #45abe9;
     --list-goals: #9c72e4;
     --list-recruiting: #64c0a8;
@@ -10,6 +11,47 @@
     --list-sales: #b0c926;
 }
 
+body{
+    margin: 0;
+}
+
+.title{
+    background-color: var(--list-light);
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
 .text-title{
     font-size: 2rem;
 }
+
+.page{
+    background-color: var(--list-background);
+    padding: 10px;
+}
+
+.case{
+        background-color: var(--list-light);
+        margin: 3rem;
+       
+    }
+
+    .add-task{
+        width: 60px;
+        height: 25px;
+        background-color: var(--list-task);
+        color: white;
+        display: inline-block;
+        border-radius: 3px;
+    }
+
+    .add-section{
+        width: 100px;
+        height: 25px;
+        display: inline-block;
+        color: var(--list-section);
+        border: 1px solid var(--list-section);
+        border-radius: 3px;
+    }
+
+
